--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
       <h1><a href="index.html">STICKY NOTES</a></h1>
       <ul>
-        <li><a href="#">how to use</a></li>
+        <li><a href="#">new note</a></li>
         <li>::</li>
-        <li><a href="#">change later</a></li>
+        <li><a href="#">how to use</a></li>
       </ul>
     </nav>
   </body>
