Add flex styling to navbar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Sticky Notes</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1><a href="index.html">STICKY NOTES</a></h1>
       <ul>
-        <li><a href="#">new note</a></li>
+        <li><a class="navlink" href="#">new note</a></li>
         <li>::</li>
-        <li><a href="#">how to use</a></li>
+        <li><a class="navlink" href="#">how to use</a></li>
       </ul>
     </nav>
   </body>
