--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <h1><a href="index.html">STICKY NOTES</a></h1>
-      <ul>
-        <li><a class="navlink" href="#">new note</a></li>
+      <h1><a class="link-style" href="index.html">STICKY NOTES</a></h1>
+      <ul class="navlinks">
+        <li><a class="link-style" href="#">new note</a></li>
         <li>::</li>
-        <li><a class="navlink" href="#">how to use</a></li>
+        <li><a class="link-style" href="#">how to use</a></li>
       </ul>
     </nav>
   </body>
