--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <nav class="navbar">
-      <h1><a class="link-style" href="index.html">STICKY NOTES</a></h1>
-      <ul class="navlinks">
-        <li><a class="link-style" href="#">new note</a></li>
-        <li>::</li>
-        <li><a class="link-style" href="#">how to use</a></li>
-      </ul>
+      <div class="nav-container">
+        <h1><a class="link-style" href="index.html">STICKY NOTES</a></h1>
+        <ul class="navlinks">
+          <li><a class="link-style" href="#">new note</a></li>
+          <li>::</li>
+          <li><a class="link-style" href="#">how to use</a></li>
+        </ul>
+      </div>
     </nav>
   </body>
 </html>
