Add margin to ul and remove underline from links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1><a class="link-style" href="index.html">STICKY NOTES</a></h1>
         <ul class="navlinks">
           <li><a class="link-style" href="#">new note</a></li>
-          <li>::</li>
+          <li class="link-style">::</li>
           <li><a class="link-style" href="#">how to use</a></li>
         </ul>
       </div>
