General structure for sticky note

--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
         </ul>
       </div>
     </nav>
+
+    <main>
+      <div class="sticky-note">
+        <ul class="note-buttons">
+          <li><button class="button delete-note"></button>X</li>
+          <li><button class="button clear-note"></button>Cl</li>
+        </ul>
+        <p class="note-content">peepee poopoo</p>
+      </div>
+    </main>
   </body>
 </html>
