Flex style sticky note buttons and swap delete and clear

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
       <div class="sticky-note">
         <ul class="note-buttons">
+          <li><button class="button clear-note">clear</button></li>
           <li><button class="button delete-note">X</button></li>
-          <li><button class="button clear-note">Clear</button></li>
         </ul>
         <p class="note-content">peepee poopoo</p>
       </div>
