--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><button class="button clear-note">clear</button></li>
           <li><button class="button delete-note">X</button></li>
         </ul>
-        <input type="text" class="note-content">
+        <textarea class="note-content"></textarea>
       </div>
     </main>
   </body>
